# fcitx5-speechinput

./: .gitignore  README.md
fcitx5-bridge/: CMakeLists.txt  README.md  speechbridge.conf
fcitx5-bridge/src/: speechbridge.cpp
fcitx5-dbus-bridge/: CMakeLists.txt  README.md  dbusbridge.conf
fcitx5-dbus-bridge/src/: dbusbridge.cpp
speech2text/: TODO.md  device_selector.py  main.py  mic_tester.py  notifier.py  paster.py  pyproject.toml  recorder.py  speech2text.sh  temp_manager.py  transcriber.py
speech2text/experiments/: record_exp.py  whisper_exp.py
